@@ -33,16 +33,17 @@ The pyreadline package is a python implementation of GNU readline functionality.
 It is not complete. It has been tested for use with windows 2000 and windows xp.
 
 features:
-- Copy and paste using the clipboard
-- Smart paste for convenient use with ipython. Converting tab separated data to 
-  python list or numpy array. Converting file paths to use / and escaping any 
-  spaces using \ .
-- Configuration file
-
- The development version is available in the IPython subversion repository_.
+ *  Copy and paste using the clipboard
+ *  Smart paste for convenient use with ipython. Converting tab separated data 
+    to python list or numpy array. Converting file paths to use / and escaping 
+    any spaces using \\\\ .
+ *  Configuration file
+ 
+ The latest development version is always available at the IPython subversion
+ repository_.
 
 .. _repository: http://ipython.scipy.org/svn/ipython/pyreadline/trunk#egg=pyreadline-dev
-"""
+ """
 
 license = 'BSD'
 
@@ -51,9 +52,9 @@ authors = {'Jorgen' : ('Jorgen Stenarson','jorgen.stenarson@bostream.nu'),
            'Jack':    ('Jack Trainor', ''),         
            }
 
-url = 'http://ipython.scipy.org'
+url = ''
 
-download_url = 'http://ipython.scipy.org/dist'
+download_url = ''
 
 platforms = ['Windows XP/2000/NT','Windows 95/98/ME']
 
